Fixed width on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -191,6 +191,19 @@ hr {
     }
 }
 
+@media screen and (max-width: 670px) {
+.mainContent{
+    width:90%;
+}
+.gameBoard{
+    width:90%;
+}
+.scoreBoard{
+    width:90%;
+}
+
+}
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
